...
                }}
            />
            <Stack.Screen
                name="ContactLocalityDetailsForm"
                component={ContactLocalityDetailsForm}
                options={{ 
                    title: "Locality Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />
            <Stack.Screen
                name="ContactResidentialPropertyDetailsForm"
                component={ContactResidentialPropertyDetailsForm}
                options={{ 
                    title: "Property Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                     }}
            />
            <Stack.Screen
                name="ContactRentDetailsForm"
                component={ContactRentDetailsForm}
...
                 }}
            />
            <Stack.Screen
                name="AddNewCustomerRentResidentialFinalDetails"
                component={AddNewCustomerRentResidentialFinalDetails}
                options={{ 
                    title: "Customer Final Details",
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                 }}
            />

            <Stack.Screen
                name="ContactBuyResidentialDetailsForm"
                component={ContactBuyResidentialDetailsForm}
                options={{ title: "Buy Details" ,
                    headerBackTitle: "Back", // This will make the back button title on the *next* screen "Back"
                }}
            />

            <Stack.Screen
                name="AddNewCustomerBuyResidentialFinalDetails"
...
